// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelineGroup > should render as collapsed group initially 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render as expanded group when taskId matches transitionIndex 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render when timeline is collapsed 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <span
    className="fui-Text timeline-task ___rsnklj0_1dgriua fk6fouc fy9rknc fwrc4pm fdj6btp f17mccla f1w7gpdv f6juhto f1gl81tg f2jf649"
  >
    1
  </span>
  <div
    style={
      {
        "margin": "3px",
      }
    }
  >
    <div
      data-selected={false}
      data-testid="timeline-node"
    >
      TimelineNode - 
      rep-0
    </div>
  </div>
  <div
    style={
      {
        "margin": "3px",
      }
    }
  >
    <div
      data-selected={true}
      data-testid="timeline-node"
    >
      TimelineNode - 
      rep-1
    </div>
  </div>
  <div
    style={
      {
        "margin": "3px",
      }
    }
  >
    <div
      data-selected={false}
      data-testid="timeline-node"
    >
      TimelineNode - 
      rep-2
    </div>
  </div>
</div>
`;

exports[`TimelineGroup > should render with default props when timeline is expanded 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render with different task number 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
    Task #6
  </button>
</div>
`;

exports[`TimelineGroup > should render with empty repetitions 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render with no selected repetition 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
    Task #1
  </button>
</div>
`;

exports[`TimelineGroup > should render with single repetition 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <button
    className="fui-Button r1alrhcs timeline-task ___rq2aul0_9etai30 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl fh7ncta f1brlhvm f1sl3k7w fneth5b ft85np5 fy9rknc figsok6 fwrc4pm fazmxh"
    onClick={[Function]}
    style={
      {
        "flexGrow": 1,
        "justifyContent": "center",
      }
    }
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___14u6ce1_ubi7uv0 f1nizpg2 fe5j1ua fjamq6b f64fuq3 fbaiahx"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
    Task #1
  </button>
</div>
`;
